# cli-plugin-webui

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
frontend/: vite.config.ts
frontend/src/assets/: main.css
frontend/src/client/: init.ts  utils.ts
frontend/src/client/api/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/components/: EmptyState.vue
frontend/src/components/Modals/AddBot/: GetBotBasicInfo.vue  InstallationItem.vue
frontend/src/components/Modals/CreateBot/: AdapterSelect.vue  DriverSelect.vue  InstallationItem.vue  ItemSelect.vue
frontend/src/components/Modals/Global/: FolderSelect.vue  LogView.vue
frontend/src/components/header/: HeaderIndex.vue  LanguageSwitch.vue  TopMenu.vue  WebUISettings.vue
frontend/src/components/sidebar/: InstanceAvatars.vue  SideMenu.vue  SidebarIndex.vue
frontend/src/router/: client.ts  index.ts
frontend/src/stores/: CustomStore.ts  NoneBotStore.ts  viewHistoryRecorder.ts
frontend/src/views/Dashboard/: MachineStat.vue
frontend/src/views/ExtensionManage/: ExtensionManageIndex.vue
frontend/src/views/Extensions/: ExtensionsIndex.vue  InstalledTab.vue  StoreTab.vue
frontend/src/views/Home/: HomeIndex.vue  OnboardingHero.vue
frontend/src/views/Login/: LoginForm.vue
frontend/src/views/Operation/: BotDetails.vue  OperationIndex.vue  TerminalItem.vue
frontend/src/views/Settings/: SettingsIndex.vue
frontend/src/views/Store/: ExtensionCard.vue  SearchBar.vue
nb_cli_plugin_webui/: scripts.py  server.py
nb_cli_plugin_webui/app/: application.py  config.py  schemas.py
nb_cli_plugin_webui/app/auth/: router.py
nb_cli_plugin_webui/app/handlers/: nonebot.py  project.py  store.py
nb_cli_plugin_webui/app/handlers/process/: schemas.py  utils.py
nb_cli_plugin_webui/app/models/: base.py  store.py
nb_cli_plugin_webui/app/process/: router.py
nb_cli_plugin_webui/app/project/: constants.py  exceptions.py  schemas.py  service.py
nb_cli_plugin_webui/app/project/config/: schemas.py
nb_cli_plugin_webui/app/status/: router.py  schemas.py
nb_cli_plugin_webui/app/utils/: string_utils.py
nb_cli_plugin_webui/app/utils/security/: jwt.py
nb_cli_plugin_webui/cli/: __init__.py
nb_cli_plugin_webui/locale/zh_CN/LC_MESSAGES/: nb-cli-plugin-webui.po
(+13 files in other folders)
