[project]
name = "nb-cli-plugin-webui"
version = "0.4.2"
description = "web ui support for nb-cli"
authors = [{ name = "Kyomotoi", email = "kyomotoiowo@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["nonebot", "cli", "web"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "psutil>=7.2.2",
  "pathlib>=1.0.1,<2.0.0",
  "WMI>=1.5.1,<2.0.0; sys_platform == 'win32'",
  "nb-cli>=1.2.3,<2.0.0",
  "fastapi>=0.95.1,<0.96.0",
  "APScheduler>=3.10.1,<4.0.0",
  "loguru>=0.7.0,<0.8.0",
  "PyJWT>=2.7.0,<3.0.0",
  "bcrypt>=5.0.0",
  "passlib>=1.7.4,<2.0.0",
  "uvicorn[standard]>=0.22.0,<0.23.0",
  "httpx[socks]>=0.24.1,<0.25.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/nonebot/cli-plugin-webui"
Repository = "https://github.com/nonebot/cli-plugin-webui"
Documentation = "https://github.com/nonebot/cli-plugin-webui"

[project.optional-dependencies]
dev = [
  "isort>=8.0.1",
  "black>=26.5.1",
  "nonemoji>=0.1.2,<0.2.0",
  "pre-commit>=4.6.0",
  "flake8>=7.3.0",
  "babel>=2.16.0,<3.0.0",
]

[project.entry-points."nb"]
webui = "nb_cli_plugin_webui.plugin:install"

[project.scripts]
init = "nb_cli_plugin_webui.scripts:init"
update = "nb_cli_plugin_webui.scripts:update"
compile = "nb_cli_plugin_webui.scripts:compile"
generate = "nb_cli_plugin_webui.scripts:generate_openapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nb_cli_plugin_webui"]

[tool.hatch.build.targets.sdist]
include = ["nb_cli_plugin_webui/dist/**/*"]

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."

[tool.pdm.scripts]
dev-backend = "python -m nb_cli_plugin_webui.server"
dev-frontend = { cmd = "pnpm dev", working_dir = "frontend" }
